--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -276,19 +276,21 @@ $width_container: 1200/1280*100%;
 
     .label-block {
         margin-left: 36/568*100%;
-        width: 140/568*100%;
+        width: 110/568*100%;
         display:inline-block;
+        margin-right: 5/568*100%;
+        border: 2px solid blue;
     }
     .inside-string-form {
         width: 100%;
         margin-bottom: 30px;
+        border: 2px solid gray;
     }
     .input-block {
         display:inline-block;
         width: 346/568*100%;
-        margin-left: 10/568*100%;
+        margin-left: 0;
         background: #d3d9dd;
-        border: none;
         background-image: url(images/form-image.png);
         background-repeat: no-repeat;
         background-position: 95% 50%;
@@ -388,6 +390,27 @@ $width_container: 1200/1280*100%;
         background-image: url(images/mapa.jpeg);
         background-size: cover;
     } 
+    .adult {
+        border: 1px dotted red;
+    }
+    .children {
+        display: inline-block;
+        width: 100/568*100%;
+        border: 1px dotted red;
+    }
+    .input-adult {
+        border: 3px solid gray;
+        display: inline-block;
+    }
+    .label-counter-adult {
+        display: inline-block;
+        width: 110/568*100%;
+        border: 2px solid blue;
+        margin-left: 36/568*100%;
+    }
+    .input-adult {
+        width: 115/568*100%;
+    }
     
     
     
