--- a/_style_1280.scss
+++ b/_style_1280.scss
@@ -265,7 +265,6 @@ $width_container: 1200/1280*100%;
     .slide-menu {
           display: none;
           position: absolute;
-          border: 1px solid blue;
           height: 360px;
           width: 700/1200*100%;
           left: 250/1200*100%;
@@ -279,23 +278,22 @@ $width_container: 1200/1280*100%;
         width: 140/568*100%;
         display:inline-block;
         margin-right: 5/568*100%;
-        border: 2px solid blue;
     }
     .inside-string-form {
         width: 100%;
         margin-bottom: 30px;
-        border: 2px solid gray;
     }
     .input-block {
+        line-height: 26px;
         display:inline-block;
         width: 340/578*100%;
         margin-left: 0;
-        background: #d3d9dd;
+        background: #f2f2f2;
         background-image: url(images/form-image.png);
         background-repeat: no-repeat;
         background-position: 95% 50%;
         line-height: 26px;
-        border: #d3d9dd 2px solid;
+        border: #f2f2f2 2px solid;
     }
     .input-block:focus {
         background: white;
@@ -304,6 +302,12 @@ $width_container: 1200/1280*100%;
         background-repeat: no-repeat;
         background-position: 95% 50%;
         line-height: 26px;
+    }
+    .input-children:focus {
+        background: white;
+    }
+    .input-adult:focus {
+        background: white;
     }
     .form-for-search-hotel {
         display:flex;
@@ -390,36 +394,55 @@ $width_container: 1200/1280*100%;
         background-image: url(images/mapa.jpeg);
         background-size: cover;
     } 
+        width: 458/570*100%;
+      
     .adult {
         border: 1px dotted red;
     }
     .children {
         display: inline-block;
-        border: 1px dotted red;
         width: 210/578*100%;
+        margin-left:  20/700*100%;;
     }
     .input-adult {
-        border: 3px solid gray;
+        border: 1px;
+        line-height: 26px;
         display: inline-block;
         width: 100/578*100%;
+        background: #f2f2f2;
     }
     .label-counter-adult {
         display: inline-block;
         width: 140/568*100%;
-        border: 2px solid blue;
         margin-left: 36/568*100%;
     }
     .label-counter-children {
         width: 70/200*100%;
         display: inline-block;
-        border: 1px solid blue;
     }
     .input-children {
+        line-height: 26px;
         display: inline-block;
         width: 110/200*100%;
+        background: #f2f2f2;
+        margin-left: 30/550*100%;
+        border: 0;
     }
     .input-adult {
         width: 115/568*100%;
+        background: #f2f2f2;
+        line-height: 26px;
+    }
+    .button-submit {
+        width: 473/550*100%;
+        margin-left: 36/568*100%;
+        background: #81b3d2;
+        color: white;
+        height: 53px;
+        outline: none;
+        box-shadow: none;
+        border: none;
+        
     }
     
     
